[workspace]
# Recall: members are path names, not package names
# Packages can be built in isolation with the flag -p
# e.g., to build toybox-core (path "core"), run:
# > cargo build -p toybox-core
members = [
  "core",
  "ctoybox",
  "toybox",
  "tb_amidar",
  "tb_breakout",
  "tb_gridworld",
  "tb_pitfall",
  "tb_spaceinvaders",
  "bench_games",
  "wp_breakout"
]
exclude = [
  # These are mostly old names for crates that may be hanging around on your system.
  "openai", 
  "amidar",
  "breakout",
  "breakout-web-play",
]

