[package]
name = "toybox"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]

[dependencies]
failure = "*"
lazy_static = "*"
png = "*"
clap = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[features]
default = ["amidar", "breakout", "space_invaders"]
breakout = []
amidar = []
space_invaders = []
gridworld = []