[package]
name = "toybox"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]

[dependencies]
failure = "*"
lazy_static = "*"
png = "*"
clap = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
amidar = {path = "../amidar", version="*", optional=true}
breakout = {path = "../breakout", version="*", optional = true}

[dependencies.toybox-core]
path = "../core"
version="*"

[features]
default = ["amidar", "breakout", "space_invaders"]
space_invaders = []
gridworld = []