[package]
name = "toybox"
version = "0.1.0"
authors = ["John Foley <jfoley@cs.umass.edu>"]

[dependencies]
amidar = {path = "../tb_amidar", version="*", optional=true}
breakout = {path = "../tb_breakout", version="*", optional = true}
space_invaders = {path = "../tb_spaceinvaders", version="*", optional = true}
gridworld = {path = "../tb_gridworld", version = "*", optional = true}

[dependencies.toybox-core]
path = "../core"
version="*"

[features]
default = ["amidar", "breakout", "space_invaders", "gridworld"]
