[package]
name = "toybox_cffi"
version = "0.1.1-dev"
authors = ["Emma 'Frank' Tosch <etosch@cs.umass.edu>"]
build = "build.rs"
homepage = "https://github.com/KDL-umass/Toybox"

[lib]
name = "toybox_cffi"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = "1"
serde_json = "1"
toybox = {path = "../toybox", version="*"}

[dependencies.toybox-core]
version = "*"
path = "../core"

[build-dependencies]
cbindgen = "0.5"
